@@ -44,7 +44,8 @@ r02	"Track-Variante"
 r02l	{"Original" "Variante 1" "Variante 2" "Variante 3"}
 r03	"Richtungs-Wegpunkte hinzufügen"
 r04	"Richtungs-Wegpunkte beschriften"
-r05	"Track-Stützstellen hinzufügen"
+r05	"Beschriftung nummerieren"
+r06	"Track-Stützstellen hinzufügen"
 r10	"GPX-Eingabedateien"
 r11	"GPX-Datei"
 r12	"GPX-Ausgabedatei-Präfix"
