@@ -44,7 +44,8 @@ r02	"Track variant"
 r02l	{"Original" "Variant 1" "Variant 2" "Variant 3"}
 r03	"Add direction waypoints"
 r04	"Add direction waypoint labels"
-r05	"Add track support waypoints"
+r05	"Add numbering to labels"
+r06	"Add track support waypoints"
 r10	"GPX input files"
 r11	"GPX file"
 r12	"GPX output file prefix"
